09/24/2003 Bob Rossi <bob@brasko.net>

    * NEWS: TGDB no checks breakpoints on startup. 

09/23/2003 Bob Rossi <bob@brasko.net>

    * NEWS: Fixed searching bug for CGDB.

09/12/2003 Bob Rossi <bob@brasko.net>

    * NEWS: Fixed crash for when TGDB would try to parse watchpoints.

09/10/2003 Bob Rossi <bob@brasko.net>

    * NEWS: Add new feature. showtgdbcommands.
	* README: Documented new feature, showtgdbcommands.

09/09/2003 Bob Rossi <bob@brasko.net>

	* NEWS: Fixed TGDB bug. TGDB will not return an extra newline when the
	user runs commands many through the GUI fast.

08/27/2003 Bob Rossi <bob@brasko.net>

	* NEWS: Fixed TGDB bug. TGDB will now return the correct line number
	when the user starts gdb with a .gdbinit. Before it would display line 1.

08/20/2003 Bob Rossi <bob@brasko.net>

	* NEWS: Fixed CGDB/TGDB bug. The file dialog window works when the inferior
	was compiled without debug.

08/19/2003 Bob Rossi <bob@brasko.net>

	* NEWS: Fixed CGDB/TGDB bug. Breakpoints are now displayed in CGDB window.

08/17/2003 Bob Rossi <bob@brasko.net>

	* configure.in: Changed version number to 0.3.4-cvs.
	* Makefile.am: added doxygen rule. Creates documentation.
	* release-todo.txt: added line that says to change version number in
	doxygen config files.

version 0.3.4 (08/14/2003):

08/14/2003 Bob Rossi <bob@brasko.net>
    
	* configure.in: Changed version number to 0.3.4 for release
	* NEWS: Added new version number.

08/12/2003 Bob Rossi <bob@brasko.net>

	* NEWS: Updating NEWS file with fix for prompt refresh problem after when
	^c is recieved after the file dialog has been opened.

08/12/2003 Bob Rossi <bob@brasko.net>

	* NEWS: Updating NEWS file with ada highlighting string literal bug.

08/11/2003 Bob Rossi <bob@brasko.net>

	* NEWS: Updating NEWS file with control_c bug fix.

08/01/2003 Bob Rossi <bob@brasko.net>
	
	* NEWS: Updating NEWS file with buffered control key libinput bug.

07/16/2003 Bob Rossi <bob@brasko.net>
