@@ -1,28 +1,25 @@
 Pushed off for gdb 0.5.0
 
 1. Integrate gdbmi stubs into libtgdb and get gdbmi integrated into tgdb
-
 2. Get assembly language working.
-
 3. Get tab completion to work through readline ?
    This is *very* difficult to do. I don't know if it is possible.
-
 4. Modify the readline library to be context driven.
 	
 Work to do for cgdb-0.4.0
 
-1. Modify the structures, to only contain things like 'const char *'
-2. Add new structures to types.h that are intended to work with MI
-3. Fix tgdb to call the lower level subsystems in an independent way.
-4. standardize the way TGDB returns paths to the front end.
+> Add new structures to types.h that are intended to work with MI
+> Fix tgdb to call the lower level subsystems in an independent way.
+> standardize the way TGDB returns paths to the front end.
    As of know, it returns the full path with the relative path. Then
    it returns a relative path for breakpoints and source files. The front end 
    then needs to look up the full path from the relative path.
-5. Add the return value of gdb when returning with TGDB_QUIT_NORMAL
-6. Make 1 quit command. Returning a structure defining how GDB was killed.
+> Add the return value of gdb when returning with TGDB_QUIT_NORMAL
+> Make 1 quit command. Returning a structure defining how GDB was killed.
 
 Finished:
 
+* Modify the structures, to only contain things like 'const char *'
 * rename type tgdb_command to tgdb_command_type.
 * rename type Command to tgdb_command
 * Add tgdb_get_command() function to the tgdb functions.
