@@ -1,3 +1,8 @@
+09/28/2003 Bob Rossi <bob@brasko.net>
+
+    * NEWS: TGDB now returns TGDB_ABSOLUTE_SOURCE_DENIED when file is not
+	available. This is a bug fix.
+
 09/24/2003 Bob Rossi <bob@brasko.net>
 
     * NEWS: TGDB no checks breakpoints on startup. 
